Added CustomeSuccessHandler, a new field in UserAddressEntity, and added feature to fill ngo_regi registration.